[package]
name = "pieuvre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
csv = "*"
serde = { version = "^1.0", features = ["derive"] }
rust_decimal = "*"
rust_decimal_macros = "*"
